# bridle

./: .gitignore  LICENSE  README.rst  setup.cfg  setup.py
.github/workflows/: test.yml
avidly/: compiler.py
bridle/: __init__.py  __main__.py  compiler.py  const_expr.py  dump_tree.py  errors.py  get_parser.py  idl.lark  idl.py  idl_const_expr.py  idl_tokenize.py  itl.py  log.py  logging.py  parser.py  tree.py  type_files.py
bridle/cdr/: data_dumper.py  serializer.py
bridle/idl/: __init__.py  const_expr.py  parser.py  tokenizer.py
bridle/lsp/: __init__.py  idl_language_server.py
bridle/utils/: __init__.py  configurable.py  iters.py  location.py
tests/: const_expr.idl  general_test.idl  test.py  test_configurable.py  test_const_expr.py  test_idl_constants.py  test_idl_errors.py  test_idl_tokenize.py  test_iters.py  test_tree.py
tests/cdr/: simple.cdr  simple.idl  simple_with_issues.cdr  test_data_dumper.py  write_simple_cdr.py
tests/idl/: general_test.idl  invalid_file.idl  test_const_expr.py  test_constants.py  test_error_reporting.py  test_extensions.py  test_general.py  test_tokenize.py
tests/itl/: basic.itl  test_itl.py
