[metadata]
name = bridle
version = 0.0.0
author = Fred Hornsey
author-email = fred@hornsey.us
home-page = https://github.com/iguessthislldo/bridle
license = MIT
license-file = LICENSE

[flake8]
max-line-length = 100
ignore =
    E128,
    E131, # Tries to Enforce an Arbitrary Indentation Pattern
    W503,
    E741, # Variables named I/l and O.
    # Disabled because I don't think I would never name a variable I or O.
    E124,
exclude =
    OpenDDS/*
    ACE_TAO/*
