[metadata]
name = bridle
version = 0.0.0
author = Fred Hornsey
author-email = fred@hornsey.us
home-page = https://github.com/iguessthislldo/bridle
license = MIT
license-file = LICENSE

[flake8]
max-line-length = 100
ignore =
    E128,
    # This tries to enforce an arbitrary indentation pattern.
    E131,
    W503,
    # This lints variables named I/l and O becuase of confusion between I/l/1
    # and O/0. It's disabled because I don't think I would never name a
    # variable I or O and don't care about l/1.
    E741,
    E124,
exclude =
    OpenDDS/*
    ACE_TAO/*
